--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,10 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --detectOpenHandles --testEnvironment=node --runInBand ./tests",
-    "start": "node server",
+    "start": "nodemon server.js",
     "lint": "eslint",
     "hooks:pre-commit": "node ./hooks/pre-commit.js",
     "hooks:pre-push": "node ./hooks/pre-push.js"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   },
   "husky": {
     "pre-commit": "npm run hooks:pre-commit",
@@ -19,13 +25,15 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chalk": "^4.1.1",
     "config": "^3.3.6",
     "express": "^4.17.1",
     "express-validator": "^6.10.1",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb-memory-server": "^6.9.6",
-    "mongoose": "^5.12.7"
+    "mongoose": "^5.12.7",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^7.29.0",
@@ -33,6 +41,7 @@
     "husky": "^6.0.0",
     "jest": "^27.0.5",
     "nodemon": "^2.0.7",
+    "rimraf": "^3.0.2",
     "supertest": "^6.1.3"
   }
 }
