--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --detectOpenHandles --watchAll  --coverage --testEnvironment=node --runInBand ./tests",
-    "start": "nodemon server.js",
+    "start": " set NODE_ENV=development&& nodemon server.js",
+    "start-prod": " set NODE_ENV=development&& nodemon server.js",
     "lint": "eslint",
     "hooks:pre-commit": "node ./hooks/pre-commit.js",
     "hooks:pre-push": "node ./hooks/pre-push.js",
