--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
     "hooks:pre-push": "node ./hooks/pre-push.js",
     "prepare": "husky install",
     "frontend": "npm start --prefix ../frontend",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build",
     "bus": "concurrently \"npm run start\" \"npm run frontend\""
   },
   "jest": {
@@ -32,6 +33,7 @@
     "chalk": "^4.1.1",
     "concurrently": "^6.2.0",
     "config": "^3.3.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.10.1",
     "gravatar": "^1.8.1",
